revisionato fino a pagina 30

--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneMobile/src/GestioneAutenticazioneM.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneMobile/src/GestioneAutenticazioneM.tex
@@ -137,7 +137,7 @@
 
 		\item \textbf{Descrizione:} l'utente ha inserito una coppia di credenziali non riconosciuta dal sistema e ha inviato i propri dati;
 
-		\item \textbf{Precondizioni:} l'utente ha inserito il proprio indirizzo email e la propria password;
+		\item \textbf{Precondizioni:} l'utente ha inserito il proprio indirizzo e-mail e la propria password;
 
 		\item \textbf{Postcondizioni:} il sistema restituisce un messaggio d'errore esplicativo e non completa la fase di registrazione dell'utente;
 
@@ -221,7 +221,7 @@
 
 		\item \textbf{Scenario principale:}
 	  		\begin{enumerate}
-		  		\item l'utente inserisce il proprio indirizzo email nell'apposito form nella schermata di login (UC-35.1.1 Inserimento dell'indirizzo email per il login); 
+		  		\item l'utente inserisce il proprio indirizzo e-mail nell'apposito form nella schermata di login (UC-35.1.1 Inserimento dell'indirizzo e-mail per il login); 
 		  		\item l'utente inserisce la propria password nell'apposito form nella schermata di login (UC-35.1.2 Inserimento della password per il login).
 	  		\end{enumerate}
 	    \item \textbf{Estensioni:}
@@ -237,20 +237,20 @@
 	\end{figure}
 
 
-\paragraph{UC-35.1.1 Inserimento dell'indirizzo email per il login}
+\paragraph{UC-35.1.1 Inserimento dell'indirizzo e-mail per il login}
 
 	\begin{itemize}
 		\item \textbf{Attore primario:} utente non autenticato;
 
-		\item \textbf{Descrizione:} l'utente vuole inserire il proprio indirizzo email nell'apposito form nella schermata di login;
+		\item \textbf{Descrizione:} l'utente vuole inserire il proprio indirizzo e-mail nell'apposito form nella schermata di login;
 
-		\item \textbf{Precondizioni:} l'utente ha selezionato il form per l'inserimento dell'indirizzo email;
+		\item \textbf{Precondizioni:} l'utente ha selezionato il form per l'inserimento dell'indirizzo e-mail;
 
-		\item \textbf{Postcondizioni:} l'utente ha inserito con successo il proprio indirizzo email;
+		\item \textbf{Postcondizioni:} l'utente ha inserito con successo il proprio indirizzo e-mail;
 
 		\item \textbf{Scenario principale:}
 	  		\begin{enumerate}
-		  		\item l'utente inserisce il proprio indirizzo email nell'apposito form nella schermata di login; 
+		  		\item l'utente inserisce il proprio indirizzo e-mail nell'apposito form nella schermata di login; 
 	  		\end{enumerate}
 	\end{itemize}
 
@@ -278,7 +278,7 @@
 
 		\item \textbf{Descrizione:} l'utente ha inserito una coppia di credenziali non riconosciuta dal sistema e ha inviato i propri dati;
 
-		\item \textbf{Precondizioni:} l'utente ha inserito il proprio indirizzo email e la propria password;
+		\item \textbf{Precondizioni:} l'utente ha inserito il proprio indirizzo e-mail e la propria password;
 
 		\item \textbf{Postcondizioni:} il sistema restituisce un messaggio d'errore esplicativo e non completa la fase di autenticazione dell'utente;
 
@@ -302,7 +302,7 @@
 		\item \textbf{Scenario principale:}
 	  		\begin{enumerate}
 		  		\item l'utente clicca il link per il recupero password; 
-		  		\item l'utente inserisce l'indirizzo email al quale inviare il link per il reset della password (UC-37.1 Inserimento mail di registrazione);
+		  		\item l'utente inserisce l'indirizzo e-mail al quale inviare il link per il reset della password (UC-37.1 Inserimento mail di registrazione);
 		  		\item l'utente inserisce la nuova password (UC-37.2 inserimento nuova password);
 		  		\item l'utente conferma la nuova password (UC-37.3 conferma nuova password);
 		  		\item l'utente invia i dati al sistema.
@@ -323,9 +323,9 @@
 
 		\item \textbf{Descrizione:} l'utente vuole inserire la propria mail di registrazione per ricevere il link di modifica della password;
 
-		\item \textbf{Precondizioni:} l'utente ha selezionato il form di inserimento dell'indirizzo email nella procedura di recupero password;
+		\item \textbf{Precondizioni:} l'utente ha selezionato il form di inserimento dell'indirizzo e-mail nella procedura di recupero password;
 
-		\item \textbf{Postcondizioni:} l'utente ha inserito con successo l'indirizzo email per la ricezione del link di modifica della password;
+		\item \textbf{Postcondizioni:} l'utente ha inserito con successo l'indirizzo e-mail per la ricezione del link di modifica della password;
 
 		\item \textbf{Scenario principale:}
 	  		\begin{enumerate}
@@ -333,7 +333,7 @@
 	  		\end{enumerate}
 	  	\item \textbf{Estensioni:}
 	  		\begin{itemize}
-		  		\item UC-38 Errore: indirizzo email mancante o non presente nel sistema.
+		  		\item UC-38 Errore: indirizzo e-mail mancante o non presente nel sistema.
 	  		\end{itemize}
 		\end{itemize}
 
