--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneAutenticazione.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneAutenticazione.tex
@@ -32,11 +32,11 @@
   
     \item \textbf{Precondizioni:} l'utente è registrato presso il sistema ed ha avviato l'applicazione web;
   
-    \item \textbf{Postcondizioni:} l'utente ha inserito correttamente email e password;
+    \item \textbf{Postcondizioni:} l'utente ha inserito correttamente e-mail e password;
   
     \item \textbf{Scenario principale:}
           \begin{enumerate}
-            \item l'utente inserisce il proprio indirizzo email (UC-1.1.1 Inserimento dell'indirizzo email per il login);
+            \item l'utente inserisce il proprio indirizzo e-mail (UC-1.1.1 Inserimento dell'indirizzo e-mail per il login);
             \item l'utente inserisce la propria password (UC-1.1.2 Inserimento della password per il login);
             \item l'utente conferma l'inserimento;
             \item il sistema elabora i dati ed in caso di credenziali errate restituisce un messaggio d'errore esplicativo (UC-2 Errore: coppia di credenziali non riconosciuta), altrimenti procede con la richiesta.
@@ -53,20 +53,20 @@
     \caption{Diagramma relativo all'inserimento delle credenziali nell'applicazione web}
 \end{figure}
   
-  \paragraph{UC-1.1.1 Inserimento dell'indirizzo email per il login}
+  \paragraph{UC-1.1.1 Inserimento dell'indirizzo e-mail per il login}
 
 	\begin{itemize}
 		\item \textbf{Attore primario:} utente non autenticato;
 
-		\item \textbf{Descrizione:} l'utente vuole inserire il proprio indirizzo email nell'apposito form nella schermata di login;
+		\item \textbf{Descrizione:} l'utente vuole inserire il proprio indirizzo e-mail nell'apposito form nella schermata di login;
 
-		\item \textbf{Precondizioni:} l'utente ha selezionato il form per l'inserimento dell'indirizzo email;
+		\item \textbf{Precondizioni:} l'utente ha selezionato il form per l'inserimento dell'indirizzo e-mail;
 
-		\item \textbf{Postcondizioni:} l'utente ha inserito con successo il proprio indirizzo email;
+		\item \textbf{Postcondizioni:} l'utente ha inserito con successo il proprio indirizzo e-mail;
 
 		\item \textbf{Scenario principale:}
 	  		\begin{enumerate}
-		  		\item l'utente inserisce il proprio indirizzo email nell'apposito form nella schermata di login; 
+		  		\item l'utente inserisce il proprio indirizzo e-mail nell'apposito form nella schermata di login; 
 	  		\end{enumerate}
 	\end{itemize}
 
