--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneMonitoraggioUtenti.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneWeb/src/GestioneMonitoraggioUtenti.tex
@@ -4,7 +4,7 @@
 \begin{itemize}
 	\item \textbf{Attore primario:} amministratore; 
 
-	\item \textbf{Descrizione:} l'amministratore può visualizzare una lista di tutti gli utenti registrati presso il sistema, con funzionalità di ricerca specifica per nome, cognome o indirizzo email oppure filtraggio per il ruolo;
+	\item \textbf{Descrizione:} l'amministratore può visualizzare una lista di tutti gli utenti registrati presso il sistema, con funzionalità di ricerca specifica per nome, cognome o indirizzo e-mail oppure filtraggio per il ruolo;
 
 	\item \textbf{Precondizioni:} l'amministratore è autenticato presso l'applicazione web;
 
@@ -14,7 +14,7 @@
 	      \begin{enumerate}
 		      \item l'amministratore accede alla funzionalità di visualizzazione e ricerca utenti;
 		      \item l'amministratore visualizza una lista di tutti gli utenti;
-		      \item l'amministratore può ricercare un determinato utente per nome (UC-4.1)/cognome (UC-4.2)/email (UC-4.3);
+		      \item l'amministratore può ricercare un determinato utente per nome (UC-4.1)/cognome (UC-4.2)/e-mail (UC-4.3);
 		      \item l'amministratore può filtrare la lista per i diversi ruoli riconosciuti nel sistema (UC-4.4).
 	      \end{enumerate}
 \end{itemize}
@@ -61,19 +61,19 @@
     \end{itemize}
 
 
-    \paragraph{UC-4.3 Ricerca utente per indirizzo email}
+    \paragraph{UC-4.3 Ricerca utente per indirizzo e-mail}
     \begin{itemize}
         \item \textbf{Attore primario:} amministratore; 
     
-        \item \textbf{Descrizione:} l'amministratore può visualizzare l'utente corrispondente ad un indirizzo email inserito.
+        \item \textbf{Descrizione:} l'amministratore può visualizzare l'utente corrispondente ad un indirizzo e-mail inserito.
     
         \item \textbf{Precondizioni:} l'amministratore visualizza la lista di tutti gli utenti del sistema.
     
-        \item \textbf{Postcondizioni:} l'amministratore visualizza l'utente associato all'indirizzo email.
+        \item \textbf{Postcondizioni:} l'amministratore visualizza l'utente associato all'indirizzo e-mail.
     
         \item \textbf{Scenario principale:}
               \begin{enumerate}
-                  \item l'amministratore digita un indirizzo email nell'apposita barra di ricerca;
+                  \item l'amministratore digita un indirizzo e-mail nell'apposita barra di ricerca;
                   \item viene visualizzato l'utente corrispondente;
                   \item se non viene riconosciuta nessuna voce corrispondente alla stringa digitata non verrà visualizzato alcun utente.
               \end{enumerate}
@@ -100,19 +100,19 @@
 \begin{itemize}
     \item \textbf{Attore primario:} amministratore; 
 
-    \item \textbf{Descrizione:} l'amministratore avvia la procedura per aggiungere un nuovo utente nel sistema inserendo il rispettivo ruolo e l'indirizzo email a cui verrà inviato un link per completare la registrazione (UC-29 Completamento della registrazione da parte del nuovo utente).
+    \item \textbf{Descrizione:} l'amministratore avvia la procedura per aggiungere un nuovo utente nel sistema inserendo il rispettivo ruolo e l'indirizzo e-mail a cui verrà inviato un link per completare la registrazione (UC-29 Completamento della registrazione da parte del nuovo utente).
 
     \item \textbf{Precondizioni:} l'amministratore è  autenticato presso l'applicazione web.
 
-    \item \textbf{Postcondizioni:} il sistema ha inviato correttamente il link di registrazione presso l'indirizzo email inserito.
+    \item \textbf{Postcondizioni:} il sistema ha inviato correttamente il link di registrazione presso l'indirizzo e-mail inserito.
 
     \item \textbf{Scenario principale:}
           \begin{enumerate}
               \item l'amministratore accede alla funzionalità di aggiunta di un nuovo utente;
               \item l'amministratore seleziona il ruolo da assegnare al nuovo utente (UC-5.1 Selezione ruolo del nuovo utente);
-              \item l'amministratore inserisce l'indirizzo email dell'utente da registrare (UC-5.2 Inserimento email del nuovo utente);
+              \item l'amministratore inserisce l'indirizzo e-mail dell'utente da registrare (UC-5.2 Inserimento e-mail del nuovo utente);
               \item l'amministratore conferma l'inserimento;
-              \item il sistema elabora la richiesta: se l'indirizzo email è valido verrà inviata una mail contenente il link, altrimenti verrà visualizzato un messaggio di errore (UC-8 Errore: email non valida).
+              \item il sistema elabora la richiesta: se l'indirizzo e-mail è valido verrà inviata una mail contenente il link, altrimenti verrà visualizzato un messaggio di errore (UC-8 Errore: e-mail non valida).
           \end{enumerate}
 \end{itemize}
 \begin{figure}[H]
@@ -137,23 +137,23 @@
               \end{enumerate}
     \end{itemize}
 
-    \paragraph{UC-5.2 Inserimento indirizzo email del nuovo utente}
+    \paragraph{UC-5.2 Inserimento indirizzo e-mail del nuovo utente}
     \begin{itemize}
         \item \textbf{Attore primario:} amministratore; 
     
-        \item \textbf{Descrizione:} l'amministratore inserisce nell'apposito campo l'indirizzo email a cui inviare il link di registrazione.
+        \item \textbf{Descrizione:} l'amministratore inserisce nell'apposito campo l'indirizzo e-mail a cui inviare il link di registrazione.
     
-        \item \textbf{Precondizioni:} l'amministratore ha avviato la funzionaliità di aggiunta di un nuovo utente.
+        \item \textbf{Precondizioni:} l'amministratore ha avviato la funzionalità di aggiunta di un nuovo utente.
     
-        \item \textbf{Postcondizioni:} l'indirizzo email è stato correttamente inserito.
+        \item \textbf{Postcondizioni:} l'indirizzo e-mail è stato correttamente inserito.
     
         \item \textbf{Scenario principale:}
               \begin{enumerate}
-                  \item l'amministratore digita l'indirizzo email nell'apposito campo di inserimento.
+                  \item l'amministratore digita l'indirizzo e-mail nell'apposito campo di inserimento.
               \end{enumerate}
         \item \textbf{Estensioni:}
               \begin{itemize}
-                    \item UC-8 Errore: email non valida.
+                    \item UC-8 Errore: e-mail non valida.
             \end{itemize}
     \end{itemize}
 
@@ -161,7 +161,7 @@
 \begin{itemize}
 	\item \textbf{Attore primario:} amministratore.
 
-	\item \textbf{Descrizione:} l'amministratore può visualizzare i dati degli utenti registrati nel sistema, quali nome (UC-6.1), cognome (UC-6.2), ruolo (UC-6.3), email (UC-6.4), password (UC-6.5), storico degli accessi (UC-6.6) e storico dell'utilizzo delle postazioni (UC-6.7).
+	\item \textbf{Descrizione:} l'amministratore può visualizzare i dati degli utenti registrati nel sistema, quali nome (UC-6.1), cognome (UC-6.2), ruolo (UC-6.3), e-mail (UC-6.4), password (UC-6.5), storico degli accessi (UC-6.6) e storico dell'utilizzo delle postazioni (UC-6.7).
 	
 	\item \textbf{Precondizioni:} l'amministratore è autenticato presso il sistema.
 
@@ -228,19 +228,19 @@
         \end{enumerate}
     \end{itemize}
 
-    \paragraph{UC-6.4 Visualizzazione dell'indirizzo email dell'utente}
+    \paragraph{UC-6.4 Visualizzazione dell'indirizzo e-mail dell'utente}
     \begin{itemize}
         \item \textbf{Attore primario:} amministratore.
         
-        \item \textbf{Descrizione:} l'amministratore può visualizzare l'indirizzo email dell'utente registrato, all'interno del relativo profilo.
+        \item \textbf{Descrizione:} l'amministratore può visualizzare l'indirizzo e-mail dell'utente registrato, all'interno del relativo profilo.
         
         \item \textbf{Precondizioni:} l'amministratore ha selezionato l'utente di cui vuole visualizzare il profilo.
     
-        \item \textbf{Postcondizioni:} l'indirizzo email dell'utente è visibile all'interno del relativo profilo.
+        \item \textbf{Postcondizioni:} l'indirizzo e-mail dell'utente è visibile all'interno del relativo profilo.
     
         \item \textbf{Scenario principale:}
         \begin{enumerate}
-            \item  l'amministratore visualizza l'indirizzo email dell'utente.
+            \item  l'amministratore visualizza l'indirizzo e-mail dell'utente.
         \end{enumerate}
     \end{itemize}
     
@@ -282,7 +282,7 @@
 \begin{itemize}
 	\item \textbf{Attore primario:} amministratore.
 
-	\item \textbf{Descrizione:} l'amministratore può modificare il ruolo (UC-7.1) e l'indirizzo email (UC-7.2) dell'utente selezionato.
+	\item \textbf{Descrizione:} l'amministratore può modificare il ruolo (UC-7.1) e l'indirizzo e-mail (UC-7.2) dell'utente selezionato.
 	
 	\item \textbf{Precondizioni:} l'amministratore è autenticato presso il sistema.
 
@@ -315,41 +315,41 @@
     
         \item \textbf{Scenario principale:}
         \begin{enumerate}
-            \item  l'amministratore seleziona il nuovo ruolo da assegnare all'utente tra quelli disponibili.
+            \item  l'amministratore seleziona il nuovo ruolo da assegnare all'utente tra quelli disponibili;
             \item l'amministratore conferma la selezione;
             \item il sistema elabora la richiesta e completa la modifica.
         \end{enumerate}
     \end{itemize}
     
-    \paragraph{UC-7.2 Modifica email dell'utente}
+    \paragraph{UC-7.2 Modifica e-mail dell'utente}
     \begin{itemize}
         \item \textbf{Attore primario:} amministratore.
     
-        \item \textbf{Descrizione:} l'amministratore può modificare l'indirizzo email dell'utente selezionato.
+        \item \textbf{Descrizione:} l'amministratore può modificare l'indirizzo e-mail dell'utente selezionato.
         
-        \item \textbf{Precondizioni:} l'amministratore ha selezionato l'utente di cui vuole modificare l'indirizzo email.
+        \item \textbf{Precondizioni:} l'amministratore ha selezionato l'utente di cui vuole modificare l'indirizzo e-mail.
     
-        \item \textbf{Postcondizioni:} l'amministratore ha modificato l'indirizzo email dell'utente.
+        \item \textbf{Postcondizioni:} l'amministratore ha modificato l'indirizzo e-mail dell'utente.
     
         \item \textbf{Scenario principale:}
         \begin{enumerate}
-            \item  l'amministratore seleziona la funzionalità di modifica del campo relativo all'indirizzo email dell'utente;
-            \item l'amministratore digita il nuovo indirizzo email nell'apposito campo;
+            \item  l'amministratore seleziona la funzionalità di modifica del campo relativo all'indirizzo e-mail dell'utente;
+            \item l'amministratore digita il nuovo indirizzo e-mail nell'apposito campo;
             \item l'amministratore conferma la modifica;
-            \item il sistema elabora la richiesta ed attua la modifica. In caso contrario restituisce un messaggio di errore (UC-8 Errore: indirizzo email non valido) e non completa la modifica.
+            \item il sistema elabora la richiesta ed attua la modifica. In caso contrario restituisce un messaggio di errore (UC-8 Errore: indirizzo e-mail non valido) e non completa la modifica.
         \end{enumerate}
         \item \textbf{Estensioni:}
               \begin{itemize}
-                    \item UC-8 Errore: indirizzo email non valido.
+                    \item UC-8 Errore: indirizzo e-mail non valido.
             \end{itemize}
     \end{itemize}
 
 
-\paragraph{UC-8 Errore: indirizzo email non valido}
+\paragraph{UC-8 Errore: indirizzo e-mail non valido}
 \begin{itemize}
 	\item \textbf{Attore primario:} amministratore;
 
-	\item \textbf{Descrizione:} l'amministratore ha provato a registrare un nuovo utente ma la registrazione non è andata a buon fine poiché l'indirizzo e-mail risultava già censito (UC-8.1 Errore: email già presente nel sistema) o inadeguato ai criteri stabiliti per la creazione di un indirizzo e-mail (UC-8.2 Errore: caratteri email non validi);
+	\item \textbf{Descrizione:} l'amministratore ha provato a registrare un nuovo utente ma la registrazione non è andata a buon fine poiché l'indirizzo e-mail risultava già censito (UC-8.1 Errore: e-mail già presente nel sistema) o inadeguato ai criteri stabiliti per la creazione di un indirizzo e-mail (UC-8.2 Errore: caratteri e-mail non validi);
 
 	\item \textbf{Precondizioni:} l'amministratore ha inserito un indirizzo e-mail non valido durante la registrazione ed ha inviato i dati al sistema;
 
@@ -362,13 +362,13 @@
 	      \end{enumerate}
 \end{itemize}
 
-    \paragraph{UC-8.1 Errore: email già presente nel sistema}
+    \paragraph{UC-8.1 Errore: e-mail già presente nel sistema}
     \begin{itemize}
         \item \textbf{Attore primario:} amministratore;
     
         \item \textbf{Descrizione:} l'amministratore ha provato a registrare un nuovo utente ma la registrazione non è andata a buon fine poiché l'indirizzo e-mail inserito è già associato ad un altro utente all'interno del sistema;
     
-        \item \textbf{Precondizioni:} l'amministratore ha inserito un indirizzo email già utilizzato da un altro utente durante la registrazione e ha inviato i dati al sistema;
+        \item \textbf{Precondizioni:} l'amministratore ha inserito un indirizzo e-mail già utilizzato da un altro utente durante la registrazione e ha inviato i dati al sistema;
     
         \item \textbf{Postcondizioni:} il sistema restituisce un messaggio d'errore esplicativo e non completa la registrazione del nuovo utente;
     
@@ -379,13 +379,13 @@
               \end{enumerate}
     \end{itemize}
 
-    \paragraph{UC-8.2 Errore: caratteri email non validi}
+    \paragraph{UC-8.2 Errore: caratteri e-mail non validi}
     \begin{itemize}
         \item \textbf{Attore primario:} amministratore;
     
         \item \textbf{Descrizione:} l'amministratore ha provato a registrare un nuovo utente ma la registrazione non è andata a buon fine poiché l'indirizzo e-mail inserito contiene dei caratteri speciali che non rispettano i criteri di inserimento di un nuovo indirizzo e-mail;
     
-        \item \textbf{Precondizioni:} l'amministratore ha inserito un indirizzo email che contiene dei caratteri non validi durante la registrazione ed ha inviato i dati al sistema;
+        \item \textbf{Precondizioni:} l'amministratore ha inserito un indirizzo e-mail che contiene dei caratteri non validi durante la registrazione ed ha inviato i dati al sistema;
     
         \item \textbf{Postcondizioni:} il sistema restituisce un messaggio d'errore esplicativo e non completa la registrazione del nuovo utente;
     
