--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneMobile/src/UtilizzoIgienizzatore.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/CasiDUso/src/ApplicazioneMobile/src/UtilizzoIgienizzatore.tex
@@ -5,10 +5,10 @@
     \item \textbf{Precondizione:} l'igienizzatore ha avviato l'applicazione;
     \item \textbf{Postcondizione:} l'igienizzatore visualizza l'elenco di tutte le stanze da igienizzare censite nel sistema;
     \item \textbf{Scenario principale:}
-    \begin{itemize}
+    \begin{enumerate}
         \item l'igienizzatore avvia l'applicazione mobile;
         \item l'applicazione mostra a video un elenco di stanze da igienizzare.
-    \end{itemize}
+    \end{enumerate}
 \end{itemize}
 
     \begin{itemize}
@@ -17,10 +17,10 @@
         \item \textbf{Precondizione:} l'igienizzatore si trova nell’apposita sezione di visualizzazione delle stanze da igienizzare; 
         \item \textbf{Postcondizione:} l'igienizzatore ha ricevuto l'elenco delle stanze da igienizzare;
         \item \textbf{Scenario principale:} 
-            \begin{itemize}
+            \begin{enumerate}
                 \item il sistema elabora la richiesta;
                 \item il sistema restituisce la lista delle stanze da igienizzare;
-            \end{itemize}
+            \end{enumerate}
     \end{itemize}
 %TODO: controllare
 \paragraph{UC-53 Marcatura stanza come igienizzata}
@@ -31,11 +31,11 @@
         \item \textbf{Precondizione:} l'igienizzatore naviga nell’apposita sezione di igienizzazione della stanza; 
         \item \textbf{Postcondizione:} l'igienizzatore ha marcato con successo una stanza come igienizzata;
         \item \textbf{Scenario principale:} 
-            \begin{itemize}
+            \begin{enumerate}
                 \item l'igienizzatore seleziona la stanza da marcare come igienizzata;	
                 \item l'igienizzatore contrassegna la stanza come igienizzata scansionando il tag RFID ad essa associata (UC-53.1 Scansione del tag RFID per segnalare la pulizia di una stanza);
                 \item il sistema elabora correttamente la richiesta contrassegnando tutte le postazioni all'interno della stanza come igienizzate.
-            \end{itemize}
+            \end{enumerate}
     \end{itemize}
 
 \begin{figure}[H]
@@ -53,9 +53,9 @@
         \item \textbf{Precondizione:} l'igienizzatore ha selezionato la stanza da marcare come igienizzata; 
         \item \textbf{Postcondizione:} l'igienizzatore ha scansionato con successo il tag RFID;
         \item \textbf{Scenario principale:} 
-            \begin{itemize}	
+            \begin{enumerate}	
                 \item l'igienizzatore appoggia il proprio dispositivo sul tag della stanza igienizzata;
                 \item il tag viene scansionato dall'applicazione;
                 \item il sistema elabora la richiesta e contrassegna tutte le postazioni all'interno della stanza come igienizzate.
-            \end{itemize}
+            \end{enumerate}
     \end{itemize}
