--- a/DocumentiEsterni/AnalisiDeiRequisiti/src/Requisiti/src/RequisitiFunzionali.tex
+++ b/DocumentiEsterni/AnalisiDeiRequisiti/src/Requisiti/src/RequisitiFunzionali.tex
@@ -14,20 +14,20 @@
     R-3-F-O & l'amministratore deve poter visualizzare e cercare tutti gli utenti registrati nel sistema& UC-4 \\
     R-3.1-F-O & Il sistema deve permettere ad un account con permessi di amministratore di ricercare un utente per il proprio nome& UC-4.1 \\
     R-3.2-F-O & Il sistema deve permettere ad un account con permessi di amministratore di ricercare un utente per il proprio cognome& UC-4.2 \\
-    R-3.3-F-O & Il sistema deve permettere ad un account con permessi di amministratore di ricercare un utente per il proprio indirizzo email& UC-4.3 \\
+    R-3.3-F-O & Il sistema deve permettere ad un account con permessi di amministratore di ricercare un utente per il proprio indirizzo e-mail& UC-4.3 \\
     R-4-F-O & Il sistema deve permettere l'aggiunta di un nuovo utente da parte dell'amministratore& UC-5 \\
     R-4.1-F-O & Il sistema deve poter selezionare il ruolo di un nuovo utente aggiunto& UC-5.1 \\
-    R-4.2-F-O & Il sistema deve permettere l'inserimento dell'indirizzo email di un nuovo account che si sta registrando& UC-5.2 \\
+    R-4.2-F-O & Il sistema deve permettere l'inserimento dell'indirizzo e-mail di un nuovo account che si sta registrando& UC-5.2 \\
     R-5-F-O & Il sistema deve permettere la visualizzazione dei dati di un singolo utente da parte dell'amministratore& UC-6 \\
     R-5.1-F-O & Il sistema deve permettere di visualizzare il nome dell'utente da parte dell'amministratore& UC-6.1 \\
     R-5.2-F-O & Il sistema deve permettere di visualizzare il cognome dell'utente da parte dell'amministratore& UC-6.2 \\
     R-5.3-F-O & Il sistema deve permettere di visualizzare il ruolo dell'utente da parte dell'amministratore& UC-6.3 \\
-    R-5.4-F-O & Il sistema deve permettere di visualizzare l'indirizzo email dell'utente da parte dell'amministratore& UC-6.4 \\
+    R-5.4-F-O & Il sistema deve permettere di visualizzare l'indirizzo e-mail dell'utente da parte dell'amministratore& UC-6.4 \\
     R-5.5-F-O & Il sistema deve permettere la visualizzazione dello storico degli accessi effettuati di un singolo utente da parte dell'amministratore& UC-6.5 \\
     R-5.6-F-O & Il sistema deve permettere la visualizzazione dello storico dell'utilizzo delle postazioni di un singolo utente da parte dell'amministratore& UC-6.6 \\
     R-6-F-O & Il sistema deve permettere la modifica dei dati di un utente da parte dell'amministratore& UC-7 \\
     R-6.1-F-O & Il sistema deve permettere la modifica del ruolo di un utente da parte dell'amministratore& UC-7.1 \\
-    R-6.2-F-O & Il sistema deve permettere la modifica dell'indirizzo email di un utente da parte dell'amministratore& UC-7.2 \\
+    R-6.2-F-O & Il sistema deve permettere la modifica dell'indirizzo e-mail di un utente da parte dell'amministratore& UC-7.2 \\
     R-7-F-O & Il sistema deve permettere la rimozione di un utente da parte dell'amministratore& UC-9 \\
     R-8-F-O & L'amministratore deve poter visualizzare l'insieme delle stanze registrate nel sistema& UC- 10\\
     R-8.1-F-O & L'amministratore deve poter ricercare una stanza registrata nel sistema per codice identificativo& UC- 10.1\\
@@ -111,9 +111,9 @@
     R-35-F-O & Il sistema deve permettere all'igienizzatore di marcare una stanza come pulita& UC-53\\
     R-35.1-F-O & Il sistema deve permettere all'igienizzatore di segnalare fisicamente l'avvenuta igienizzazione attraverso la scansione del tag RFID associato alla stanza& UC-53.1\\
     R-36-F-O & Il sistema resituisce un messaggio di errore se la coppia di credenzial inserita in fase di  login non viene riconosciuta& UC-2\\
-    R-37-F-O & Il sistema resituisce un messaggio di errore se l'indirizzo email del nuovo utente da aggiungere non è valido& UC-8\\
-    R-37.1-F-O & Il sistema resituisce un messaggio di errore se l'indirizzo email inserito è già presente& UC-8.1\\
-    R-37.2-F-O & Il sistema resituisce un messaggio di errore se l'indirizzo email presenta caratteri non validi& UC-8.2\\
+    R-37-F-O & Il sistema resituisce un messaggio di errore se l'indirizzo e-mail del nuovo utente da aggiungere non è valido& UC-8\\
+    R-37.1-F-O & Il sistema resituisce un messaggio di errore se l'indirizzo e-mail inserito è già presente& UC-8.1\\
+    R-37.2-F-O & Il sistema resituisce un messaggio di errore se l'indirizzo e-mail presenta caratteri non validi& UC-8.2\\
     R-38-F-O & Il sistema resituisce un messaggio di errore se il codice inserito durante l'aggiunta di una nuova stanza non è valido& UC-12\\
     R-38.1-F-O & Il sistema resituisce un messaggio di errore se il codice inserito durante l'aggiunta di una nuova stanza non univoco& UC-12.1\\
     R-38.2-F-O & Il sistema resituisce un messaggio di errore se il codice inserito durante l'aggiunta di una nuova presenta caratteri non validi& UC-12.2\\
@@ -130,7 +130,7 @@
     R-45-F-O & Il sistema resituisce un messaggio di errore se la password inserita dal nuovo utente è mancante o presenta caratteri non validi& UC-33\\
     R-46-F-O & Il sistema resituisce un messaggio di errore se la password re-inserita dal nuovo utente è mancante o non corrispondente a quella precedentemente inserita& UC-34\\
     R-47-F-O & Il sistema resituisce un messaggio di errore se la coppia di credenziali inserita durante il login presso l'applicazione mobile non viene riconosciuta& UC-36\\
-    R-48-F-O & Il sistema resituisce un messaggio di errore se l'indirizzo email inserito per effettuare il recupero della password è mancante o non riconosciuto& UC-38\\
+    R-48-F-O & Il sistema resituisce un messaggio di errore se l'indirizzo e-mail inserito per effettuare il recupero della password è mancante o non riconosciuto& UC-38\\
     R-49-F-O & Il sistema resituisce un messaggio di errore se la nuova passwrod inserita è mancante o non valida& UC-39\\
     R-50-F-O & Il sistema resituisce un messaggio di errore se la nuova passwrod re-inserita è mancante o non non corrispondente a quella precedentemente inserita& UC-40\\
     R-51-F-O & Il sistema resituisce un messaggio di errore se la password inserita, da modificare, è mancante o errata& UC-42\\
