correzione bug build

--- a/DocumentiEsterni/PianoDiProgetto/main.tex
+++ b/DocumentiEsterni/PianoDiProgetto/main.tex
@@ -7,7 +7,7 @@
 \usepackage{graphics}
 \usepackage{pdfpages}
 \usepackage{multirow}
-\usepackage[official]{eurosym}
+\usepackage{eurosym}
 \usepackage{hyperref}
 \usepackage{tikz}
 \usepackage{pdflscape}
