--- a/DocumentiEsterni/PianoDiQualifica/src/Autovalutazione/main.tex
+++ b/DocumentiEsterni/PianoDiQualifica/src/Autovalutazione/main.tex
@@ -19,7 +19,7 @@ la cui struttura è stabilita in \textit{Norme di Progetto v1.0.0}.
 
 \subsection{Valutazioni sull'organizzazione}
 \input{src/Autovalutazione/src/Valutazione_organizzazione.tex}
-
+\newpage
 \subsection{Valutazione sui ruoli}
 \input{src/Autovalutazione/src/Valutazione_ruoli.tex}
 
