--- a/DocumentiEsterni/Verbali/Verbale Esterno 2021-01-22/main.tex
+++ b/DocumentiEsterni/Verbali/Verbale Esterno 2021-01-22/main.tex
@@ -1,6 +1,6 @@
 \documentclass[a4paper, oneside, openany, dvipsnames, table]{article}
 \usepackage[utf8]{inputenc}
-\usepackage{../Shared/Sweleven}
+\usepackage{../../../Shared/Sweleven}
 \input{src/Comandi.tex}
 
 \begin{document}
