--- a/DocumentiEsterni/Verbali/Verbale Esterno 2021-01-22/src/Comandi.tex
+++ b/DocumentiEsterni/Verbali/Verbale Esterno 2021-01-22/src/Comandi.tex
@@ -1,10 +1,10 @@
 \newcommand{\Titolo}{Verbale esterno del 2021-01-22}
 
-\newcommand{\Approvatore}{}
+\newcommand{\Approvatore}{Abdelwahad Kandoul}
 \newcommand{\Redattori}{Giovanni Grigoletto}
-\newcommand{\Verificatori}{}
+\newcommand{\Verificatori}{Filippo Pinton}
 
-\newcommand{\pathimg}{../Shared/logo.png}
+\newcommand{\pathimg}{../../../Shared/logo.png}
 
 \newcommand{\Versionedoc}{1.0.0}
 
