--- a/DocumentiEsterni/Verbali/Verbale Esterno 2021-01-22/src/RegistroModifiche.tex
+++ b/DocumentiEsterni/Verbali/Verbale Esterno 2021-01-22/src/RegistroModifiche.tex
@@ -13,8 +13,8 @@
         % usare \responsabile per indicare responsabile
 
         %		L'ultimo evento deve essere sempre all'inizio della tabella
-        X.X.X                  & XXXX-XX-XX                                       & Responsabile                                & TODO & \responsabile{} \\
-        X.X.X                  & XXXX-XX-XX                                       & Verifica                                    & TODO & \verificatore{} \\
+        1.0.0                  & 2021-01-26                                       & Approvazione                                & Abdelwahad Kandoul & \responsabile{} \\
+        0.1.0                  & 2021-01-24                                       & Verifica                                    & Filippo Pinton & \verificatore{} \\
         0.0.1                  & 2021-01-22                                       & Stesura verbale                           & Giovanni Grigoletto & \redattore{}    \\
     \end{longtable}
 }
